--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "App that gives current weather of a place",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Success Ogechi",
